nvd3 & dashboard graphs

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <link href="/assets/stylesheets/animation.css" rel="stylesheet">
     <link href="/assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
     <link href="/assets/stylesheets/athenaSlide.css" rel="stylesheet">
-    <link href="/lib/nvd3/nv.d3.min.css" rel="stylesheet">
+    <link href="/assets/javascripts/nvd3/nv.d3.min.css" rel="stylesheet">
     <!--<link href="/lib/dangle/css/dangle.css" rel="stylesheet">-->
     <!--   <link rel="shortcut icon" href="images/favicon.png"> -->
 
@@ -193,10 +193,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-cookies.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="assets/javascripts/athenaSlide.js"></script>
-    <script src="assets/javascripts/moment.min.js"></script>
     <script src="assets/javascripts/underscore.js"></script>
-    <script src="lib/d3/d3.min.js"></script>
-    <script src="lib/nvd3/nv.d3.min.js"></script>
+    <script src="assets/javascripts/d3/d3.min.js"></script>
+    <script src="assets/javascripts/nvd3/nv.d3.min.js"></script>
     <!--<script src="lib/dangle/dist/dangle.min.js"></script>-->
 
     <!-- endbuild -->
