--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -68,11 +68,64 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <div ng-switch="!!events ? 1 : 0" >
+                                <div ng-switch="!!messages ? 1 : 0" >
                                     <h1>
                                         <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                        <div ng-switch-default><a href="" ui-sref="analyzer">{{events.total}}</a></div>
+                                        <div ng-switch-default><a href="" ui-sref="analyzer">{{messages.total}}</a></div>
                                     </h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-8 dashboard-panel">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Messages</h3>
+                        </div>
+                        <div class="panel panel-default">
+                            <a href="" ui-sref="analyzer">
+                                <div class="panel-body">
+                                    <div ng-switch="!!messages ? 1 : 0" >
+                                        <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                                        <div ng-switch-default>
+                                            <div nvd3-line-chart show-legend="false" axis-x-label="Day" axis-x-type="date" axis-x-format="%-m/%-d" data="messages.times" height="300"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 dashboard-panel">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Messages In/Out</h3>
+                        </div>
+                        <div class="panel panel-default">
+                            <a href="" ui-sref="analyzer">
+                                <div class="panel-body">
+                                    <div ng-switch="!!messages ? 1 : 0" >
+                                        <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                                        <div ng-switch-default>
+                                            <div nvd3-ipe-chart data="messages.terms" height="300"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 dashboard-panel">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Real-time Device Activity</h3>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div ng-switch="!!realtimeEvents ? 1 : 0" >
+                                    <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                                    <div ng-switch-default>
+                                        <div nvd3-bar-chart show-legend="false" axis-y-label="Events" data="realtimeEvents" height="300"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -91,94 +144,6 @@
                         <!--<button class="btn btn-sm btn-default">Upgrade</button>-->
                     <!--</div>-->
                 <!--</div>-->
-
-                <!--<div class="row">-->
-                    <!--<div class="col-sm-8 dashboard-panel">-->
-                        <!--<div class="panel-heading">-->
-                            <!--<h3 class="panel-title">Messages</h3>-->
-                        <!--</div>-->
-                        <!--<div class="panel panel-default">-->
-                            <!--<div class="panel-body">-->
-                                <!--<div ng-switch="!!events ? 1 : 0" >-->
-                                    <!--<div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>-->
-                                    <!--<div ng-switch-default  style="height: 250px;">-->
-                                        <!--<fs:area-->
-                                            <!--bind="events.facets.times"-->
-                                            <!--duration="750"-->
-                                            <!--interpolate="true" />-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-4 dashboard-panel">-->
-                        <!--<div class="panel-heading">-->
-                            <!--<h3 class="panel-title">Top Messages</h3>-->
-                        <!--</div>-->
-                        <!--<div class="panel panel-default">-->
-                            <!--<div class="panel-body">-->
-                                <!--<div ng-switch="!!events ? 1 : 0" >-->
-                                    <!--<div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>-->
-                                    <!--<div ng-switch-default style="height: 250px;">-->
-                                        <!--<fs:donut-->
-                                            <!--outer-radius="200"-->
-                                            <!--inner-radius="75"-->
-                                            <!--duration="750"-->
-                                            <!--bind="events.facets.types" />-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <div class="row">
-                    <div class="col-sm-8 dashboard-panel">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Messages</h3>
-                        </div>
-                        <div class="panel panel-default">
-                            <a href="" ui-sref="analyzer">
-                                <div class="panel-body">
-                                    <div ng-switch="!!events ? 1 : 0" >
-                                        <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-                                        <div ng-switch-default>
-                                            <div nvd3-line-chart show-legend="false" axis-x-label="Day" axis-x-type="date" axis-x-format="%-m/%-d" axis-y-label="Events" data="events.times" height="300"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 dashboard-panel">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Top Messages</h3>
-                        </div>
-                        <div class="panel panel-default">
-                            <a href="" ui-sref="analyzer">
-                                <div class="panel-body">
-                                    <div ng-switch="!!events ? 1 : 0" >
-                                        <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-                                        <div ng-switch-default>
-                                            <div nvd3-ipe-chart data="events.terms" height="300"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 dashboard-panel">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Real-time Device Activity</h3>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-body" style="text-align: left;">
-                                <div id="chartContainer" style="height: 300px; width:100%;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
