--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,6 @@
     <link href="/assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
     <link href="/assets/stylesheets/athenaSlide.css" rel="stylesheet">
     <link href="/assets/javascripts/nvd3/nv.d3.min.css" rel="stylesheet">
-    <!--<link href="/lib/dangle/css/dangle.css" rel="stylesheet">-->
     <!--   <link rel="shortcut icon" href="images/favicon.png"> -->
 
     <script src="http://skynet.im/js/skynet.js"></script>
@@ -196,7 +195,6 @@
     <script src="assets/javascripts/underscore.js"></script>
     <script src="assets/javascripts/d3/d3.min.js"></script>
     <script src="assets/javascripts/nvd3/nv.d3.min.js"></script>
-    <!--<script src="lib/dangle/dist/dangle.min.js"></script>-->
 
     <!-- endbuild -->
 
@@ -227,6 +225,7 @@
     <script src="angular/services/message.js"></script>
     <script src="angular/services/elastic.js"></script>
     <script src="angular/directives/nvd3-line-chart.js"></script>
+    <script src="angular/directives/nvd3-pie-chart.js"></script>
     <script src="angular/directives/popover.js"></script>
     <script src="angular/controllers/about.js"></script>
     <script src="angular/controllers/admin.js"></script>
