--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="col-sm-4 dashboard-panel">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Messages In/Out</h3>
+                            <h3 class="panel-title">Messages Types</h3>
                         </div>
                         <div class="panel panel-default">
                             <a href="" ui-sref="analyzer">
@@ -106,7 +106,7 @@
                                     <div ng-switch="!!messages ? 1 : 0" >
                                         <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
                                         <div ng-switch-default>
-                                            <div nvd3-ipe-chart data="messages.terms" height="300"></div>
+                                            <div nvd3-pie-chart data="messages.types" height="300"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -114,23 +114,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12 dashboard-panel">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Real-time Device Activity</h3>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                <div ng-switch="!!realtimeEvents ? 1 : 0" >
-                                    <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-                                    <div ng-switch-default>
-                                        <div nvd3-bar-chart show-legend="false" axis-y-label="Events" data="realtimeEvents" height="300"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!--<div class="row">-->
+                    <!--<div class="col-sm-12 dashboard-panel">-->
+                        <!--<div class="panel-heading">-->
+                            <!--<h3 class="panel-title">Real-time Device Activity</h3>-->
+                        <!--</div>-->
+                        <!--<div class="panel panel-default">-->
+                            <!--<div class="panel-body">-->
+                                <!--<div ng-switch="!!realtimeEvents ? 1 : 0" >-->
+                                    <!--<div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>-->
+                                    <!--<div ng-switch-default>-->
+                                        <!--<div nvd3-bar-chart show-legend="false" axis-y-label="Events" data="realtimeEvents" height="300"></div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
                 <!--<div class="row">-->
                     <!--<div class="col-sm-11">-->
                         <!--<div>Subscription - Unlimited:</div>-->
