--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="col-sm-4 dashboard-panel">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Messages Types</h3>
+                            <h3 class="panel-title">Message Types</h3>
                         </div>
                         <div class="panel panel-default">
                             <a href="" ui-sref="analyzer">
