Fixed issues with state transitions in the Add Device Wizard.

--- a/public/index.html
+++ b/public/index.html
@@ -9,29 +9,30 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <meta content="text/html;charset=utf-8" http-equiv="content-type">
     <meta content="Meshines" name="description">
-    <link href="/assets/images/meta_icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="/assets/images/meta_icons/apple-touch-icon.png" rel="apple-touch-icon-precomposed">
-    <link href="/assets/images/meta_icons/apple-touch-icon-57x57.png" rel="apple-touch-icon-precomposed" sizes="57x57">
-    <link href="/assets/images/meta_icons/apple-touch-icon-72x72.png" rel="apple-touch-icon-precomposed" sizes="72x72">
-    <link href="/assets/images/meta_icons/apple-touch-icon-114x114.png" rel="apple-touch-icon-precomposed" sizes="114x114">
-    <link href="/assets/images/meta_icons/apple-touch-icon-144x144.png" rel="apple-touch-icon-precomposed" sizes="144x144">
+    <link href="assets/images/meta_icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="assets/images/meta_icons/apple-touch-icon.png" rel="apple-touch-icon-precomposed">
+    <link href="assets/images/meta_icons/apple-touch-icon-57x57.png" rel="apple-touch-icon-precomposed" sizes="57x57">
+    <link href="assets/images/meta_icons/apple-touch-icon-72x72.png" rel="apple-touch-icon-precomposed" sizes="72x72">
+    <link href="assets/images/meta_icons/apple-touch-icon-114x114.png" rel="apple-touch-icon-precomposed" sizes="114x114">
+    <link href="assets/images/meta_icons/apple-touch-icon-144x144.png" rel="apple-touch-icon-precomposed" sizes="144x144">
 
     <title>Octoblu</title>
 
     <!-- SCROLLS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-    <!-- <link href="/assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen"> -->
+    <!-- <link href="assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen"> -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link href="/assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
-    <link href="/assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/assets/stylesheets/demo.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/assets/stylesheets/erosIntro.css" rel="stylesheet" media="screen">
-    <link href="/assets/stylesheets/style.css" rel="stylesheet" media="screen">
-    <link href="/assets/stylesheets/custom.css" rel="stylesheet">
-    <link href="/assets/stylesheets/animation.css" rel="stylesheet">
-    <link href="/assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
-    <link href="/assets/stylesheets/athenaSlide.css" rel="stylesheet">
-    <link href="/assets/javascripts/nvd3/nv.d3.min.css" rel="stylesheet">
+    <link href="assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/bootstrap-switch/bootstrap-switch.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/demo.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/erosIntro.css" rel="stylesheet" media="screen">
+    <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen">
+    <link href="assets/stylesheets/custom.css" rel="stylesheet">
+    <link href="assets/stylesheets/animation.css" rel="stylesheet">
+    <link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
+    <link href="assets/stylesheets/athenaSlide.css" rel="stylesheet">
+    <link href="assets/javascripts/nvd3/nv.d3.min.css" rel="stylesheet">
     <!--   <link rel="shortcut icon" href="images/favicon.png"> -->
 
     <script src="http://skynet.im/js/skynet.js"></script>
@@ -192,6 +193,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-cookies.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-resource.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="assets/javascripts/bootstrap-switch/build/js/bootstrap-switch.min.js"></script>
     <script src="assets/javascripts/athenaSlide.js"></script>
     <script src="assets/javascripts/underscore.js"></script>
     <script src="assets/javascripts/d3/d3.min.js"></script>
@@ -220,6 +222,7 @@
     <script src="angular/app.js"></script>
     <script src="angular/services/user.js"></script>
     <script src="angular/services/owner.js"></script>
+    <script src="angular/services/gateway.js"></script>
     <script src="angular/services/device.js"></script>
     <script src="angular/services/channel.js"></script>
     <script src="angular/services/nodered.js"></script>
