--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -5,18 +5,11 @@
         <p>
             You currently have no Hubs added to your account. Add a new Hub.
         </p>
-        <a class="btn btn-primary" ui-sref="connector.devices.wizard"><i class="fa fa-home fa-lg"></i>&nbsp;&nbsp;Add Hub</a>
+        <a class="btn btn-primary" href="" ui-sref="connector.devices.wizard.instructions" ng-click="addHub()"><i class="fa fa-home fa-lg"></i>&nbsp;&nbsp;Add Hub</a>
     </div>
-</div>
-
-<div ng-if="claimedGateways.length &gt; 0" class="row">
-
-</div>
-<div class="row">
-    <div class="divScroll">
-        <div class="scrollWrapper">
-            <div>
-                <h3><i class='icon-off'></i> Available Devices</h3>
+        <div class="divScroll" >
+            <div class="scrollWrapper">
+                <h3 style="margin-left: 20px;"><i class='icon-off'></i> Available Devices</h3>
                 <ul class="channellist">
                     <li ng-repeat="smartDevice in smartDevices | orderBy:'name'">
                         <div class="channel_icon-grid-view mod-index-0 pop-over"
@@ -26,7 +19,10 @@
                     </li>
                 </ul>
             </div>
-
         </div>
     </div>
+<div ng-if="claimedGateways.length &gt; 0" class="row">
+
 </div>
+
+<div ui-view></div>
