--- a/public/pages/connector/devices/wizard/find-hub.html
+++ b/public/pages/connector/devices/wizard/find-hub.html
@@ -1,33 +1,51 @@
-<div ng-if="currentState.name === 'find-hub'">
-    <div ng-show="availableGateways.length == 0">
-        <div class="panel panel-danger">
-            <div class="panel-heading">No Available Hubs Found!</div>
-            <p>Could not find any available hubs that are unclaimed. Please exit and
-                make sure that your gateway has been installed correctly.
-            </p>
-        </div>
-    </div>
-    <div ng-show="availableGateways.length !== 0">
-        <div class="panel panel-primary">
-            <div class="panel-heading center-block">Available Hubs</div>
-            <div class="panel-body">
-                <form class="form-horizontal" role="form">
-                    <div class="form-group">
-                        <label  class="col-sm-2 control-label">Hub ID</label>
-                        <div class="col-sm-10">
-                            <select ng-model="selectedGateway" ng-required="true" ng-options="g.uuid for g in availableGateways">
-                            </select>
-                        </div>
-                    </div>
-                </form>
-
-
-            </div>
-            <div class="panel-footer"></div>
-        </div>
+<div ng-show="availableGateways.length == 0">
+    <div class="panel panel-danger">
+        <div class="panel-heading">No Available Hubs Found!</div>
+        <p>Could not find any available hubs that are unclaimed. Please exit and
+            make sure that your gateway has been installed correctly.
+        </p>
     </div>
 </div>
-<div ng-if="currentState.name === 'edit-hub'">
-    <h5>Edit Hub</h5>
+<div ng-show="availableGateways.length !== 0">
+    <div class="panel panel-primary">
+        <div class="panel-heading center-block">Available Hubs</div>
+        <div class="panel-body">
+            <form class="form-horizontal" role="form">
+                <div class="form-group">
+                    <label  class="col-sm-2 control-label">ID</label>
+                    <div class="col-sm-10">
+                        <select  class="form-control" ng-model="selectedHub" ng-required="!selectedHub" ng-options="g.ipAddress + '( ' +  g.uuid  + ' )' for g in availableHubs">
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label  class="col-sm-2 control-label">Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" ng-required="!hubName" ng-model="hubName">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <accordion>
+                        <accordion-group>
+                            <accordion-heading>
+                                Details <span class="glyphicon pull-right"  ng-class="{'glyphicon-chevron-down': isopen, 'glyphicon-chevron-right': !isopen}"></span>
+                            </accordion-heading>
+                            <ul class="list-group">
+                                <li class="list-group-item">Channel <span class="label label-primary pull-right">{{selectedHub.channel}}</span></li>
+                                <li class="list-group-item">UUID<span class="label label-primary pull-right">{{selectedHub.uuid}}</span></li>
+                                <li class="list-group-item">Token <span class="label label-primary pull-right">{{selectedHub.token}}</span></li>
+                                <li class="list-group-item">IP Address <span class="label label-primary pull-right">{{selectedHub.ipAddress}}</span></li>
+                                <li class="list-group-item">Localhost <span class="label label-primary pull-right">{{selectedHub.localhost}}</span></li>
+                                <li class="list-group-item">Online <span class="label label-primary pull-right">{{selectedHub.online}}</span></li>
+                            </ul>
 
+                        </accordion-group>
+                    </accordion>
+                </div>
+            </form>
+        </div>
+        <div class="panel-footer">
+
+        </div>
+    </div>
 </div>
