--- a/public/pages/connector/devices/wizard/index.html
+++ b/public/pages/connector/devices/wizard/index.html
@@ -1,79 +1,19 @@
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancel()">&times;</button>
-                <h4 class="modal-title" id="myModalLabel"><i class="fa fa-home fa-2x"></i>&nbsp;&nbsp;Add a new Hub</h4>
-            </div>
-            <div class="modal-body">
-               <div ng-if="$state.is('connector.devices.wizard.instructions')">
-                   <div class="">
-                       <p>
-                           Here are instructions on how to install your Hub....
+<div class="modal-dialog wizard-dialog">
+   <div class="modal-content">
+       <div class="modal-header">
+           <a type="button" class="close"  data-dismiss="modal" ui-sref="connector.devices" aria-hidden="true">&times;</a>
+           <h4 class="modal-title" id="myModalLabel"><i class="fa fa-home fa-2x"></i>&nbsp;&nbsp;Add a new Hub</h4>
+       </div>
+       <div ui-view class="modal-body">
+       </div>
+       <div class="modal-footer">
+           <a type="button" id="wizard-cancel-btn" class="btn btn-danger" data-dismiss="modal" ui-sref="connector.devices"><i class="fa fa-times"></i>&nbsp;&nbsp;Close</a>
+           <a type="button" id="wizard-previous-btn" class="btn btn-default"  ui-sref="{{getPreviousState()}}"><i class="fa fa-chevron-circle-left"></i>&nbsp;&nbsp;Previous</a>
+           <a type="button" id="wizard-next-btn" class="btn btn-default" ui-sref="{{getNextState()}}">Next&nbsp;&nbsp;<i class="fa fa-chevron-circle-right"></i></a>
+           <a type="button" id="wizard-finish-btn"  class="btn btn-success" disabled="disabled"><i class="fa fa-save"></i>&nbsp;&nbsp;Finish</a>
+       </div>
+   </div>
+</div>
 
-                           when you have completed the installation select 'Next'
-                       </p>
-                   </div>
-               </div>
-               <div ng-if="$state.is('connector.devices.wizard.findhub')">
-                   <div ng-show="availableHubs.length == 0">
-                       <div class="panel panel-danger">
-                           <div class="panel-heading">No Available Hubs Found!</div>
-                           <p>Could not find any available hubs that are unclaimed. Please exit and
-                               make sure that your gateway has been installed correctly.
-                           </p>
-                       </div>
-                   </div>
-                   <div ng-show="availableHubs.length !== 0">
-                       <div class="panel panel-primary">
-                           <div class="panel-heading center-block">Available Hubs</div>
-                           <div class="panel-body">
-                               <form class="form-horizontal" role="form">
-                                   <div class="form-group">
-                                       <label  class="col-sm-2 control-label">ID</label>
-                                       <div class="col-sm-10">
-                                           <select  class="form-control" ng-model="selectedHub" ng-required="!selectedHub" ng-options="g.ipAddress + '( ' +  g.uuid  + ' )' for g in availableHubs">
-                                           </select>
-                                       </div>
-                                   </div>
-                                   <div class="form-group">
-                                       <label  class="col-sm-2 control-label">Name</label>
-                                       <div class="col-sm-10">
-                                           <input type="text" class="form-control" ng-required="!hubName" ng-model="hubName">
-                                       </div>
-                                   </div>
-                                   <div class="form-group">
-                                       <accordion>
-                                           <accordion-group>
-                                               <accordion-heading>
-                                                   Details <span class="glyphicon pull-right"  ng-class="{'glyphicon-chevron-down': isopen, 'glyphicon-chevron-right': !isopen}"></span>
-                                               </accordion-heading>
-                                               <ul class="list-group">
-                                                   <li class="list-group-item">Channel <span class="label label-primary pull-right">{{selectedHub.channel}}</span></li>
-                                                   <li class="list-group-item">UUID<span class="label label-primary pull-right">{{selectedHub.uuid}}</span></li>
-                                                   <li class="list-group-item">Token <span class="label label-primary pull-right">{{selectedHub.token}}</span></li>
-                                                   <li class="list-group-item">IP Address <span class="label label-primary pull-right">{{selectedHub.ipAddress}}</span></li>
-                                                   <li class="list-group-item">Localhost <span class="label label-primary pull-right">{{selectedHub.localhost}}</span></li>
-                                                   <li class="list-group-item">Online <span class="label label-primary pull-right">{{selectedHub.online}}</span></li>
-                                               </ul>
-
-                                           </accordion-group>
-                                       </accordion>
-                                   </div>
-                               </form>
-                           </div>
-                           <div class="panel-footer">
-
-                           </div>
-                       </div>
-                   </div>
-
-               </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" id="wizard-cancel-btn" class="btn btn-danger" data-dismiss="modal" ng-click="cancel()"><i class="fa fa-times"></i>&nbsp;&nbsp;Close</button>
-                <button type="button" id="wizard-previous-btn" class="btn btn-default" ng-click="previous()"><i class="fa fa-chevron-circle-left"></i>&nbsp;&nbsp;Previous</button>
-                <button type="button" id="wizard-next-btn" class="btn btn-default" ng-click="next()">Next&nbsp;&nbsp;<i class="fa fa-chevron-circle-right"></i></button>
-                <button type="button" id="wizard-finish-btn"  class="btn btn-success" disabled="disabled"><i class="fa fa-save"></i>&nbsp;&nbsp;Finish</button>
-            </div>
-        </div>
 
 
