Fixed transitions between states added validation checking and switch toggle.

--- a/public/index.html
+++ b/public/index.html
@@ -231,6 +231,7 @@
     <script src="angular/directives/nvd3-line-chart.js"></script>
     <script src="angular/directives/nvd3-pie-chart.js"></script>
     <script src="angular/directives/popover.js"></script>
+    <script src="angular/directives/toggle.js"></script>
     <script src="angular/controllers/about.js"></script>
     <script src="angular/controllers/admin.js"></script>
     <script src="angular/controllers/analyzer.js"></script>
