--- a/public/pages/connector/devices/wizard/find-hub.html
+++ b/public/pages/connector/devices/wizard/find-hub.html
@@ -36,7 +36,11 @@
                                 <li class="list-group-item">Token <span class="label label-primary pull-right">{{selectedHub.token}}</span></li>
                                 <li class="list-group-item">IP Address <span class="label label-primary pull-right">{{selectedHub.ipAddress}}</span></li>
                                 <li class="list-group-item">Localhost <span class="label label-primary pull-right">{{selectedHub.localhost}}</span></li>
-                                <li class="list-group-item">Online <toggle-switch label="ONLINE" readOnly="true" state="{{selectedHub.online}}"></toggle-switch></li>
+                                <li class="list-group-item">Online
+                                    <div class="pull-right">
+                                        <toggle-switch state="{{selectedHub.online}}"></toggle-switch>
+                                    </div>
+                                </li>
                             </ul>
 
                         </accordion-group>
