--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -163,7 +163,7 @@
         </div>
         <div>
           <br /><br />
-          <input type="text" ng-model="selectedSubdevice.name" placeholder="name" class="form-control" required><br />
+          <input type="text" ng-model="selectedSubdevice.name" placeholder="name" class="form-control" disabled><br />
           <div class="form-group" ng-repeat="deviceProperty in deviceProperties">
             <div ng-if="deviceProperty.type == 'string' || deviceProperty.type == 'number'">
               <input type="text" ng-model="selectedSubdevice.options[deviceProperty.name]" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="deviceProperty.required"><!br />
