--- a/public/pages/connector/devices/wizard/find-hub.html
+++ b/public/pages/connector/devices/wizard/find-hub.html
@@ -14,14 +14,14 @@
                 <div class="form-group">
                     <label  class="col-sm-2 control-label">ID</label>
                     <div class="col-sm-10">
-                        <select  class="form-control" ng-change="checkFinish(hubName, selectedHub)" ng-model="selectedHub" ng-required="!selectedHub" ng-options="g.ipAddress + '( ' +  g.uuid  + ' )' for g in availableGateways">
+                        <select  class="form-control" ng-change="checkClaim(hubName, selectedHub); notifyHubSelected(selectedHub)" ng-model="selectedHub" ng-required="!selectedHub" ng-options="g.uuid for g in availableGateways">
                         </select>
                     </div>
                 </div>
                 <div class="form-group">
                     <label  class="col-sm-2 control-label">Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="hubName" ng-change="checkFinish(hubName, selectedHub)">
+                        <input type="text" class="form-control" ng-model="hubName" ng-change="checkClaim(hubName, selectedHub); notifyHubNameChanged(hubName)">
                     </div>
                 </div>
                 <div class="form-group">
@@ -46,6 +46,7 @@
                         </accordion-group>
                     </accordion>
                 </div>
+
             </form>
         </div>
     </div>
