removing event transition checks and updating claimed gateways.

--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -21,7 +21,8 @@
             </div>
         </div>
     </div>
-<div ng-if="claimedGateways.length &gt; 0" class="row">
+<div ng-if="claimedGateways.length > 0" class="row">
+    <div ng-repeat="g in claimedGateways" ></div>
 
 </div>
 
