--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
     <link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
     <link href="assets/stylesheets/athenaSlide.css" rel="stylesheet">
     <link href="assets/javascripts/nvd3/nv.d3.min.css" rel="stylesheet">
+    <link href="assets/javascripts/owl.carousel/owl.carousel.css" rel="stylesheet">
+    <link href="assets/javascripts/owl.carousel/owl.theme.css" rel="stylesheet">
     <!--   <link rel="shortcut icon" href="images/favicon.png"> -->
 
     <script src="http://skynet.im/js/skynet.js"></script>
@@ -198,11 +200,13 @@
     <script src="assets/javascripts/underscore.js"></script>
     <script src="assets/javascripts/d3/d3.min.js"></script>
     <script src="assets/javascripts/nvd3/nv.d3.min.js"></script>
+    <script src="assets/javascripts/owl.carousel/owl.carousel.min.js"></script>
 
     <!-- endbuild -->
 
     <!-- build:js scripts/modules.js -->
     <script src="assets/javascripts/angular-ui-router.min.js"></script>
+    <script src="assets/javascripts/angular-ui-utils/ui-utils.min.js"></script>
     <script src="assets/javascripts/angular-google-analytics.js"></script>
     <script src="assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
     <script src="assets/javascripts/canvasjs.min.js" type="text/javascript"></script>
@@ -232,6 +236,7 @@
     <script src="angular/directives/nvd3-pie-chart.js"></script>
     <script src="angular/directives/popover.js"></script>
     <script src="angular/directives/toggle.js"></script>
+    <script src="angular/directives/device-carousel.js"></script>
     <script src="angular/controllers/about.js"></script>
     <script src="angular/controllers/admin.js"></script>
     <script src="angular/controllers/analyzer.js"></script>
