--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
     <script src="assets/javascripts/theme.js" type="text/javascript"></script>
     <script src="assets/javascripts/plugins/validate/jquery.validate.min.js" type="text/javascript"></script>
     <script src="assets/javascripts/plugins/validate/additional-methods.js" type="text/javascript"></script>
-    <script src="assets/javascripts/jquery.jsoneditor.js" type="text/javascript"></script>
+    <script src="assets/javascripts/jsoneditor/jsoneditor.js" type="text/javascript"></script>
     <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="assets/javascripts/isotope.js"></script>
     <script src="assets/javascripts/skroller.js"></script>
