--- a/public/pages/connector/devices/subdevice-add-edit.html
+++ b/public/pages/connector/devices/subdevice-add-edit.html
@@ -1,1 +1,19 @@
-<p></p>
+<div class="modal-header" >
+    <img src="{{smartDevice.logo}}" class="img-rounded pull-left" height="48px" width="48px">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancel()">&times;</button>
+    <h3 class="modal-title text-center" style="padding-bottom: 1em;" id="myModalLabel">{{mode}} {{smartDevice.name}}</h3>
+</div>
+<div class="modal-body">
+    <form class="form-horizontal" role="form">
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Hub</label>
+            <div class="col-sm-10">
+                <select class="form-control" ng-options="h.name for h in hubs" ng-model="selectedHub"></select>
+            </div>
+        </div>
+    </form>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancel()">Close</button>
+    <button type="button" class="btn btn-primary" ng-click="save(selectedHub)">Save changes</button>
+</div>
