Added modal for adding smart device, added plugin service to query plugins.

--- a/public/index.html
+++ b/public/index.html
@@ -232,6 +232,7 @@
     <script src="angular/services/nodered.js"></script>
     <script src="angular/services/message.js"></script>
     <script src="angular/services/elastic.js"></script>
+    <script src="angular/services/plugin.js"></script>
     <script src="angular/directives/nvd3-line-chart.js"></script>
     <script src="angular/directives/nvd3-pie-chart.js"></script>
     <script src="angular/directives/popover.js"></script>
