fixed edit subdevice

--- a/public/pages/connector/advanced/gateways.html
+++ b/public/pages/connector/advanced/gateways.html
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div class="modal-footer">
-          <button class="btn btn-primary" ng-click="ok(subDeviceName, plugin, deviceProperties)">OK</button>
+          <button class="btn btn-primary" ng-click="ok(deviceProperties)">OK</button>
           <button class="btn" ng-click="cancel()">Cancel</button>
       </div>
   </script>
