Delete sub devices works on Connector - Device  Page

--- a/public/index.html
+++ b/public/index.html
@@ -246,6 +246,7 @@
     <script src="angular/controllers/contact.js"></script>
     <script src="angular/controllers/controller.js"></script>
     <script src="angular/controllers/device.js"></script>
+    <script src="angular/controllers/subdevice.js"></script>
     <script src="angular/controllers/dashboard.js"></script>
     <script src="angular/controllers/designer.js"></script>
     <script src="angular/controllers/devtools.js"></script>
