--- a/public/pages/directives/device-carousel.html
+++ b/public/pages/directives/device-carousel.html
@@ -2,7 +2,7 @@
     <h4 class="col-sm-12">{{hub.name}} <small>Devices</small></h4>
    <ul class="list-group col-sm-12" ng-scroll-viewport style="height: 200px; overflow-y: scroll;">
        <li ng-repeat="subdevice in hub.subdevices" class="list-group-item" style="min-height: 90px !important;">
-           <img class="img-thumbnail pull-left" src="assets/images/robots/robot5.png"  height="48px" width="48px"/>
+           <img class="img-thumbnail pull-left" src="{{getSubDeviceLogo(subdevice)}}"  height="48px" width="48px"/>
           <div class="col-sm-8">
               <strong style="padding-right: 1em;">Name:</strong><span class="" >{{subdevice.name}}</span>
               <br>
