--- a/public/pages/connector/devices/subdevice/add.html
+++ b/public/pages/connector/devices/subdevice/add.html
@@ -4,12 +4,9 @@
     <h3 class="modal-title text-center" style="padding-bottom: 1em;" id="myModalLabel">{{mode}} {{smartDevice.name}}</h3>
 </div>
 <div class="modal-body">
-        <alert ng-repeat="validationError in validationErrors" type="validationError.type" close="closeAlert(validationError)">
-            <strong>{{validationError.summary}}</strong> <br />
-            {{validationError.msg}}
-        </alert>
 
-    <form class="form-horizontal" name="addSubDeviceForm" role="form" ng-click="save()">
+
+    <form class="form-horizontal" role="form">
         <div class="form-group">
             <label class="col-sm-2 control-label">Hub</label>
             <div class="col-sm-10">
@@ -17,10 +14,10 @@
             </div>
 
         </div>
-        <div class="form-group" ng-class="{'has-success' : addSubDeviceForm.deviceName.$valid, 'has-error' : addSubDeviceForm.deviceName.$invalid }">
+        <div class="form-group">
             <label class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
-                <input type="text" name="deviceName"  ng-model="deviceName" placeholder="Name" class="form-control" required="required">
+                <input type="text" name="name"  ng-model="subDeviceName" placeholder="Name" class="form-control" required="required">
             </div>
         </div>
         <div class="form-group"  ng-repeat="deviceProperty in deviceProperties">
@@ -34,9 +31,15 @@
                 <input type="checkbox" name="{{deviceProperty.name}}" ng-model="deviceProperty.value" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="{{deviceProperty.required}}">
             </div>
         </div>
+        <div class="form-group">
+            <alert ng-repeat="validationError in validationErrors" type="validationError.type" close="closeAlert(validationError)">
+                <strong>{{validationError.summary}}</strong> <br />
+                {{validationError.msg}}
+            </alert>
+        </div>
     </form>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancel()">Close</button>
-    <button type="button" class="btn btn-primary" ng-disabled="{{addSubDeviceForm.$invalid}}" ng-click="addSubDevice()">Save changes</button>
+    <button type="button" class="btn btn-primary" ng-disabled="{{validationErrors.length > 0}}" ng-click="addSubDevice(subDeviceName, selectedHub, smartDevice, deviceProperties)">Save changes</button>
 </div>
