updated modals for add and edit so that they are now saving and sending messages to skynet

--- a/public/pages/connector/devices/subdevice/edit.html
+++ b/public/pages/connector/devices/subdevice/edit.html
@@ -32,5 +32,5 @@
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancel()">Close</button>
-    <button type="submit" class="btn btn-primary" ng-click="ok(subdevice, hub, deviceProperties)">Save changes</button>
+    <button type="submit" class="btn btn-primary" ng-click="ok(deviceProperties)">Save changes</button>
 </div>
