Fixed modals for add / edit smart device. Now the web api calls are sent to skynet correctly.

--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -43,7 +43,7 @@
     <li id="hub-{{g.uuid}}" class="media hub-panel" ng-repeat="g in claimedGateways | orderBy: 'name'">
 
         <a class="pull-left" href="#">
-            <img class="media-object img-thumbnail" src="assets/images/network_hub.png" alt="hub-logo">
+            <img class="media-object img-thumbnail" ng-src="assets/images/network_hub.png" alt="hub-logo">
         </a>
 
         <div class="media-body col-sm-4" style="padding-left: 0; padding-right: 0;">
