--- a/public/pages/connector/devices/wizard/index.html
+++ b/public/pages/connector/devices/wizard/index.html
@@ -8,7 +8,7 @@
        </div>
        <div class="modal-footer">
            <a type="button" id="wizard-cancel-btn" class="btn btn-danger" data-dismiss="modal" ui-sref="connector.devices"><i class="fa fa-times"></i>&nbsp;&nbsp;Close</a>
-           <a type="button" id="wizard-previous-btn" class="btn btn-default"  ui-sref="{{getPreviousState()}}"><i class="fa fa-chevron-circle-left"></i>&nbsp;&nbsp;Previous</a>
+           <a type="button" ng-show="!$state.is('connector.devices.wizard.instructions')" id="wizard-previous-btn" class="btn btn-default"  ui-sref="{{getPreviousState()}}"><i class="fa fa-chevron-circle-left"></i>&nbsp;&nbsp;Previous</a>
            <a type="button" id="wizard-next-btn" class="btn btn-default" ui-sref="{{getNextState()}}">Next&nbsp;&nbsp;<i class="fa fa-chevron-circle-right"></i></a>
 
            <a  ng-show="$state.is('connector.devices.wizard.findhub')" type="button" id="wizard-finish-btn"  class="btn btn-success" ng-disabled="{{!canClaim(hubName, selectedHub)}}" ng-click="saveHub(selectedHub, hubName)" ><i class="fa fa-save"></i>&nbsp;&nbsp;Finish</a>
